--- a/test2.html
+++ b/test2.html
@@ -1,5 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<meta charset="UTF-8">
+<title>Page Title</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<style>
+html,body {font-family:"Verdana",sans-serif}
+h1,h2,h3,h4,h5,h6 {font-family:"Segoe UI",sans-serif}
+.controls {
+  position: fixed;
+  height: 20%;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* align-content: center; */
+  /* text-align: center; */
+  width: 100%;
+  justify-content: space-evenly;
+}
+</style>
 <body>
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQEa1i7Ig2qgB6S_Q8Ac0OuaT4ofldLOMHHEJCwDggh14zbU4Ao2VnY5hlUyAa7hw/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </body>
