PDF viewer: Removed some keyboard events

--- a/jibri.html
+++ b/jibri.html
@@ -90,8 +90,8 @@ h1,h2,h3,h4,h5,h6 {font-family:"Segoe UI",sans-serif}
   const configOverwrite = {
     lastN: 1,
     startSilent: true,
-    startWithAudioMuted: true,
-    startWithVideoMuted: true,
+    // startWithAudioMuted: true,
+    // startWithVideoMuted: true,
     enableEmailInStats: true,
     p2p: {
       enabled: false,
@@ -100,7 +100,7 @@ h1,h2,h3,h4,h5,h6 {font-family:"Segoe UI",sans-serif}
       disabled: true,
     },
     disableDeepLinking: true,
-    iAmRecorder: true,
+    // iAmRecorder: true,
     externalConnectUrl: null,
   };
   const toolbarButtons = [
@@ -110,13 +110,9 @@ h1,h2,h3,h4,h5,h6 {font-family:"Segoe UI",sans-serif}
     'tileview',
     // 'hangup',
     'profile',
-    'raisehand',
     'videoquality',
     'videobackgroundblur',
     'help',
-    'desktop',
-    'microphone',
-    'camera',
   ];
   const options = {
     // this.api = new JitsiMeetExternalAPI('meet.jit.si', {
