--- a/jibri.html
+++ b/jibri.html
@@ -100,7 +100,7 @@ h1,h2,h3,h4,h5,h6 {font-family:"Segoe UI",sans-serif}
       disabled: true,
     },
     disableDeepLinking: true,
-    // iAmRecorder: true,
+    iAmRecorder: true,
     externalConnectUrl: null,
   };
   const toolbarButtons = [
