--- a/jitsi.html
+++ b/jitsi.html
@@ -81,6 +81,9 @@ h1,h2,h3,h4,h5,h6 {font-family:"Segoe UI",sans-serif}
   width: 100%;
   justify-content: space-evenly;
 }
+iframe {
+  background-color: aquamarine;
+}
 </style>
 <body style="margin: 0">
   <div style="position: fixed; width: 100%; height: 80%;" id="jitsi-container" />
@@ -138,6 +141,7 @@ h1,h2,h3,h4,h5,h6 {font-family:"Segoe UI",sans-serif}
     // },
     configOverwrite,
     interfaceConfigOverwrite: {
+      DEFAULT_BACKGROUND: 'transparent',
       DISABLE_JOIN_LEAVE_NOTIFICATIONS: true,
       DISABLE_FOCUS_INDICATOR: true,
       SHOW_POWERED_BY: false,
