--- a/meet.html
+++ b/meet.html
@@ -23,48 +23,6 @@
   const roomId = getUrlParameter('room', '');
   const room = rooms[roomId];
   const user = room.users[userId];
-  function joinLeftStage() {
-    console.log('joinLeftStage');
-    let speakerEmails;
-    if (speakers.isJoinedStage(user.email)) {
-      speakerEmails = speakers.removeSpeakers(user.email);
-      api.setRoomData({ isMicOn: false, isCamOn: false, speakerEmails });
-    } else {
-      speakerEmails = speakers.addSpeakers(user.email);
-      api.setRoomData({ isMicOn: true, isCamOn: true, speakerEmails });
-    }
-  }
-
-  let startLivestreamResolve = null;
-
-  function startLiveStream() {
-    console.log('startLiveStream');
-    return new Promise((resolve) => {
-      startLivestreamResolve = resolve;
-      const streamUrl = getUrlParameter('stream', 'rtmp://137.116.244.53/WebRTCAppEE/54CdkSvQuY2N1607411864186');
-      api.executeCommand('startRecording', {
-        mode: 'stream',
-        shouldShare: true,
-        // rtmpStreamKey: streamSettings.rtmpStreamKey,
-        // rtmpBroadcastID: streamSettings.rtmpBroadcastID,
-        youtubeStreamKey: streamUrl,
-      });
-    })
-  }
-
-  async function onClickStartLiveStream() {
-    await startLiveStream();
-    setTimeout(() => {
-      const speakerEmails = speakers.getSpeakers();
-      api.setRoomData({ speakerEmails });
-    }, 1000);
-
-  }
-
-  function updateSpeakerList() {
-    const speakerEmails = speakers.getSpeakers();
-    api.setRoomData({ speakerEmails });
-  }
 </script>
 <style>
 html,body {font-family:"Verdana",sans-serif}
@@ -112,10 +70,13 @@ iframe {
     p2p: {
       enabled: false,
     },
-    disableDeepLinking: true,
-    webrtcIceUdpDisable: true,
-    webrtcIceTcpDisable: false,
+    disableDeepLinking: true
   };
+  const disableUdp = getUrlParameter('disableUdp', '0');
+  if (disableUdp === '1') {
+    configOverwrite.webrtcIceUdpDisable = true;
+    configOverwrite.webrtcIceTcpDisable = false;
+  }
   const toolbarButtons = [
     'livestreaming',
     'fullscreen',
