--- a/jitsi.html
+++ b/jitsi.html
@@ -117,6 +117,7 @@ const disableUdp = getUrlParameter('disableUdp', '0');
     configOverwrite.webrtcIceTcpDisable = false;
   }
   const toolbarButtons = [
+	'settings',
     'livestreaming',
     'fullscreen',
     'filmstrip',
