--- a/jibri.html
+++ b/jibri.html
@@ -14,7 +14,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <iframe allow="camera *;microphone *;" src="test/index.html" width="100%" height="500px"></iframe>
+      <iframe allow="camera *;microphone *;" src="devices.html" width="100%" height="500px"></iframe>
     </div>
     <button onclick="test()">Test</button>
   </body>
@@ -26,7 +26,7 @@
       iframe.width = '100%';
       iframe.height = '500px';
       iframe.allow = "camera *;microphone *;";
-      iframe.src = "test/index.html";
+      iframe.src = "devices.html";
       root.appendChild(iframe);
     }
   </script>
